fix: footer dropdown menu visibility and dropdown position on mobile.

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1106,7 +1106,7 @@ body:not(.reader) main#stream {
         white-space: nowrap;
         color: white;
 
-        &:after {
+        &:before {
           content: "+ Add to playlist";
           font-weight: bold;
           font-size: 14px;
@@ -1995,6 +1995,30 @@ body:not(.reader) main#stream div.flux.active.current {
         animation: pulse 3s infinite;
       }
 
+      p.enclosure-content {
+        a[download=""] {
+          /* View on YouTube button (💾), hide default label. */
+          font-size: 0px !important;
+        }
+        
+        a[download=""]:after {
+          /* Replace default label "💾" with "Watch on YouTube"-button. */
+          content: "Watch on YouTube";
+          font-size: 1rem;
+          color: #fff;
+          padding: 0.5rem 1rem;
+          background: #303136;
+          border-radius: 5px;
+          min-height: 39px;
+          line-height: 25px;
+          display: inline-flex;
+          place-items: center;
+          margin-bottom: 1rem;
+        }
+      }
+
+
+
 
     }
 
@@ -2012,6 +2036,7 @@ body:not(.reader) main#stream div.flux.active.current {
       overflow-x: clip;
 
     }
+
   }
 
   .flux_header {
@@ -2033,17 +2058,49 @@ body:not(.reader) main#stream div.flux.active.current {
     }
 
     .item.titleAuthorSummaryDate .title.multiline {
-      /* Limit card header to 2 lines, to prevent overlowing var(--elm-card-header-height), especially on mobile. */
-      white-space: normal;
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2;
+      /* Limit card header to 1 lines, to prevent overlowing var(--elm-card-header-height), especially on mobile. */
+      white-space: nowrap;
+      text-overflow: ellipsis;
       overflow: hidden;
+      display: block;
     }
   }
 
-  footer .item.labels ul.dropdown-menu {
-    bottom: var(--elm-card-footer-height);
+  footer {
+    /* Prevent mobile browsers with elements (e.g. omnibar) to be placed on top. */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 600;
+    background-color: #0f0f0f;
+  
+    .item.labels ul.dropdown-menu {
+      bottom: var(--elm-card-footer-height);
+    }
+
+    .dropdown-label {
+      color: #fff;
+    }
+
+    .dropdown-menu {
+      /* Prevent "Add to playlist" (My Labels) button to reveal outside viewport */
+      bottom: 50px;
+
+      &:after {
+        /* Hide the dropdown triangle */
+        display: none;
+      }
+    }
+
+    
+    @media (max-width: 600px) {
+      .dropdown-menu {
+        /* Span the dropdown menu horizontally on mobile */
+        position: fixed;
+      }
+    }
+
+
   }
 }
 
